CREATE SCHEMA "access";

CREATE SCHEMA "content";

CREATE TABLE "access"."users" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "username" varchar(100) UNIQUE NOT NULL,
  "email" varchar(350) UNIQUE NOT NULL,
  "password_hash" text NOT NULL,
  "role" int NOT NULL DEFAULT 9,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now()),
  "last_login_at" timestamptz
);

CREATE TABLE "access"."refresh_tokens" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "token" text UNIQUE NOT NULL,
  "token_type" varchar(50) NOT NULL DEFAULT 'long',
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "expires_at" timestamptz NOT NULL DEFAULT (CURRENT_TIMESTAMP + INTERVAL '3 days'),
  "revoked" boolean NOT NULL DEFAULT false,
  "ip" inet,
  "user_agent" text,
  "last_used_at" timestamptz
);

CREATE TABLE "access"."password_resets" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "reset_token" text UNIQUE NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "expires_at" timestamptz NOT NULL DEFAULT (CURRENT_TIMESTAMP + INTERVAL '1 hour'),
  "used" boolean NOT NULL DEFAULT false,
  "used_at" timestamptz,
  "ip" inet,
  "user_agent" text
);

CREATE TABLE "content"."posts" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "author_id" int NOT NULL,
  "title" varchar(255) NOT NULL,
  "content" text NOT NULL,
  "content_mime" varchar(50) DEFAULT 'text/html',
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "content"."comments" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "post_id" int NOT NULL,
  "author_id" int NOT NULL,
  "content" text NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE INDEX ON "access"."users" ("username");

CREATE INDEX ON "access"."users" ("email");

CREATE INDEX ON "access"."refresh_tokens" ("user_id", "created_at");

CREATE INDEX ON "access"."refresh_tokens" ("token");

CREATE INDEX ON "access"."refresh_tokens" ("expires_at");

CREATE INDEX ON "access"."password_resets" ("user_id", "created_at");

CREATE INDEX ON "access"."password_resets" ("reset_token");

CREATE INDEX ON "access"."password_resets" ("expires_at");

CREATE INDEX ON "content"."posts" ("author_id");

CREATE INDEX ON "content"."posts" ("created_at");

CREATE INDEX ON "content"."comments" ("post_id", "created_at");

CREATE INDEX ON "content"."comments" ("author_id", "created_at");

ALTER TABLE "content"."posts" ADD FOREIGN KEY ("author_id") REFERENCES "access"."users" ("id");

ALTER TABLE "content"."comments" ADD FOREIGN KEY ("post_id") REFERENCES "content"."posts" ("id");

ALTER TABLE "content"."comments" ADD FOREIGN KEY ("author_id") REFERENCES "access"."users" ("id");

ALTER TABLE "access"."refresh_tokens" ADD FOREIGN KEY ("user_id") REFERENCES "access"."users" ("id");

ALTER TABLE "access"."password_resets" ADD FOREIGN KEY ("user_id") REFERENCES "access"."users" ("id");
